--- a/.github/workflows/update-nightly.yml
+++ b/.github/workflows/update-nightly.yml
@@ -3,7 +3,7 @@ jobs:
    sync:
       runs-on: ubuntu-latest
       steps:
-           uses: peterjgrainger/action-create-branch@v2.0.0
+         - uses: peterjgrainger/action-create-branch@v2.0.0
            env:
              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
            with:
