--- a/.github/workflows/update-nightly.yml
+++ b/.github/workflows/update-nightly.yml
@@ -1,14 +1,12 @@
 on: workflow_dispatch
-name: Update prod branch on release
+name: Update branch
 jobs:
-  sync:
-    name: Update nightly branch
+  run_action:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: Embraser01/update-git-branch-action@v1.0.0
-      if: github.ref == 'refs/heads/master'
-      with:
-        branch: angerson-nightly
-        force: 1 # To push-force to the branch
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Merge Follow Branch
+        uses: toysmoon/follow_branch@1.0.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          target-branch: master
+          following-branch: nightly
