--- a/.github/workflows/update-nightly.yml
+++ b/.github/workflows/update-nightly.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: zofrex/mirror-branch@v1
       with:
-        target-branch: angerson-is-angry
+        target-branch: super-nightly
